--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3.3'
+version: '3'
 
 services:
   db:
-    image: postgres:14.3
+    image: postgres:15-alpine
     container_name: postgres_nestjs
     restart: always
     ports:
@@ -11,6 +11,7 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
+      
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
